# ai_project_text_analysis

./: .gitignore  Makefile  pyproject.toml
summarization/: main.py  makefile  pyproject.toml
summarization/api/grpc_client/: service_constants.py  service_registry.py  utils.py
summarization/api/protobufs/: service_registry.proto  service_registry.py  service_registry_pb2.py  service_registry_pb2_grpc.py
summarization/api/service/: nats.py  service_constants.py  service_registry.py  transformer.py
summarization/api/utils/: service_registry.py  transformer_nats.py
